# cnn-image-retrieval

./: .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  app.py  demo_search.py  evaluation_report.json  evaluation_report.txt  generate_report.py  pyproject.toml  run_feature_extraction.py  server.py  test_system.py  web_app.py
features/: evaluation_report.json  evaluation_report.txt  evaluation_results.pkl  image_features.pkl
features/clip_vlm_cache/: clip_index.faiss  clip_index_meta.json  moondream_caption_cache.json
notebooks/: test.ipynb
src/: evaluate.py  extract_features.py  model_comparison.py  preprocess.py  query_pipeline.py  similarity_search.py
web/static/: styles.css
web/templates/: index.html
